--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,14 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+input[type="text"],
+input[type="email"],
+input[type="password"] {
+  @apply w-full border my-1 py-2 px-3 rounded-2xl;
+}
+
+button.primary {
+  background-color: #f5385d;
+  @apply bg-primary w-full p-2 rounded-2xl my-1;
+}
