--- a/client/src/index.css
+++ b/client/src/index.css
@@ -5,6 +5,7 @@
 input[type="text"],
 input[type="email"],
 input[type="password"],
+input[type="number"],
 textarea {
   @apply w-full border my-1 py-2 px-3 rounded-2xl;
 }
@@ -12,4 +13,24 @@ textarea {
 button.primary {
   background-color: #f5385d;
   @apply bg-primary w-full p-2 rounded-2xl my-1 text-white;
+}
+
+.loader {
+  width: 48px;
+  height: 48px;
+  border: 5px solid #888;
+  border-bottom-color: #ff3d00;
+  border-radius: 50%;
+  display: inline-block;
+  box-sizing: border-box;
+  animation: rotation 1s linear infinite;
+}
+
+@keyframes rotation {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
